# WebsiteLaunch

./: .gitignore  .replit  app.py  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  server.py
_next/static/chunks/: 4982-d3323ae1400ea496.js  4bd1b696-17e5a86613f9bd6a.js
api/auth/: get-session.html
api/user/: subscription.html
app/api/auth/get-session/: route.js
app/api/auth/sign-in/: route.js
app/api/auth/sign-out/: route.js
app/api/auth/sign-up/: route.js
app/api/user/credits/: route.js
app/api/user/subscription/: route.js
attached_assets/_DataURI/: data.image.png.5a57bfaa302888.txt
attached_assets/hesper.vercel.app/_next/static/chunks/: 7148-410785cb9bdb5cf3.js
attached_assets/hesper.vercel.app/_next/static/chunks/app/: page-0909645d41fdb1db.js
attached_assets/hesper.vercel.app/api/user/: credits.html
hesper.vercel.app/_next/static/chunks/: 3465-60bd4491e5bf1ce1.js  4629-404f91b3ad429dfe.js
hesper.vercel.app/_next/static/chunks/app/: global-error-22ff5f040a5e5768.js
hesper.vercel.app/_next/static/css/: 3ecec16dd3690466.css
lib/: auth.js  db.js
nextjs-backup/: index.html
nextjs-backup/_next/static/chunks/: 1684-d823afd03d30fc15.js  3753-17816d3dcb2b7d7f.js  4277-a7dd09d3dd05c27c.js  6874-dea82571f65f2b58.js  main-app-98be56bfdea664aa.js  webpack-786bc8dd37364a66.js
nextjs-backup/_next/static/chunks/app/: layout-39b8e4f01f1fe4c1.js
nextjs-backup/_next/static/chunks/app/sign-in/: page-887c19f707beb78c.js
nextjs-backup/fonts.googleapis.com/: css2.css
(+1 files in other folders)
